# scrape_yahoo_odds

./: .gitignore  README.md  explore.ipynb  explore2.ipynb  explore_football.ipynb  explore_mlb.ipynb  explore_nba_2026.ipynb  money_data.py  push_charts.ipynb  pyproject.toml  scrape_rules.py  scrape_utils.py  scrape_yahoo.ipynb  scrape_yahoo.py  scrape_yahoo_mlb.py  scrape_yahoo_nba.py  scrape_yahoo_nfl.py  scratch_explore_mlb.ipynb  spread_data.py
nfl_scores/: 2021.csv  2022.csv  2023.csv  2024.csv
test/: manual.py  test_mlb.py
test/fixtures/: fixture1.json  fixture2.json
yahoo_scrapes/2021/: odds.csv
yahoo_scrapes/2022/: odds.csv
yahoo_scrapes/2023/: odds.csv
yahoo_scrapes/2024/: 2024_odds.csv  odds.csv
