[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-yahoo-odds"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloudscraper",
    "jsonpath-ng",
    "pandas",
    "pytest",
]

[tool.setuptools.packages.find]
exclude = ["mlb_scrapes*", "nfl_scores*", "yahoo_scrapes*"]

[tool.pytest.ini_options]
pythonpath = ["."]
